vlib/v/checker/tests/map_init_invalid_syntax.out
vlib/v/checker/tests/map_init_invalid_syntax.vv:2:7: error: invalid empty map initilization syntax, use e.g. map[string]int{} instead
    1 | fn main() {
    2 |     a := {}
      |          ~~
    3 |     println(a)
    4 | }